--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title : Web Development w/ srck
 tagline: Rails / Agile / AWS / Linux / Swift
 author :
   name : Sosuke Kimura
-  email : sosuke@kimura-online.com
+  email : srck@kimura-online.com
   github : srck
   twitter : kimura_online
 
